foodtop images added

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -35,3 +35,11 @@ h1 {
   height: 436px;
   width: 2000px;
 }
+.cool9 {
+  background-color: orange;
+  background-size: cover;
+  height: 636px;
+  width: 2000px;
+  text-align: center;
+
+}
