--- a/css2/style.css
+++ b/css2/style.css
@@ -7,6 +7,18 @@
     font-size: 50px;
     margin: 6px 3px;
 }
+.glyphicon-chevron-right{
+  transform: translate(125px, -660%);
+}
+.glyphicon-chevron-left{
+  transform: translate(-125px, -660%);
+}
+#arrow5{
+  transform: translate(30px, -40%);
+}
+#arrow6{
+  transform: translate(-30px, -40%);
+}
 
 h1 {
   text-align: center;
@@ -36,6 +48,9 @@ h1 {
   color: white;
   text-align: center;
   font-size: 98%;
+}
+.colimages:hover{
+  background-color: white;
 }
 .breakfast{
   position: relative;
@@ -153,6 +168,7 @@ h1 {
 }
 .menyu img{
   width: 100%;
+  height: 100%;
 }
 #lonely:hover{
 	opacity: 0.5;
