--- a/css2/style.css
+++ b/css2/style.css
@@ -13,6 +13,12 @@
 .glyphicon-chevron-right{
   transform: translate(125px, -660%);
 }
+#arrow5{
+
+}
+#arrow6{
+  
+}
 h1 {
   text-align: center;
   color: white;
